k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: galindo
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: galindo
  replicas: 1
  template:
    metadata:
      labels:
         app: galindo
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: galindo
           image: localhost:5000/galindo:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: galindo
  namespace: thymeleaf
spec:
#  type: NodePort
  selector:
    app: galindo
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
