k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: galindo
   namespace: thymeleaf
spec:
   ingressClassName: public
   rules:
   - host: gruposjaveriana.dynaco.co
     http:
       paths:
       - path: /grupo-2-1/galindo
         pathType: Prefix
         backend:
           service:
             name: galindo
             port:
               number: 8080
